# grindurus-backtest-service

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  dockerfile  main.py  pyproject.toml  settings.py  test_main.http
app/api/: backtest.py  webhooks.py
app/core/: config.py  database.py
app/models/: job.py
app/schemas/: backtest.py
app/services/: compute.py  job_service.py
application/: compute.py  database.py  job_service.py  models.py  schemas.py  settings.py  webhooks.py
boss/: __init__.py
clients/: __init__.py  boss_client.py  klines_client.py
db/: __init__.py  config.py  database.py  job_service.py  models.py  queries.py  schemas.py  service.py  settings.py  webhooks.py
db/schemas/: __init__.py  webhooks.py
payments/: PaymentAdapter.py  __init__.py  kirapay_middleware.py  promocode_middleware.py  x402PaymentAdapter.py  x402_middleware.py
