# pyproject.toml

[project]
name = "backtest-service"
version = "0.1.0"
description = "Backtest orchestrator for algorithmic trading platform"
requires-python = ">=3.13.7"
license = { text = "GNU General Public License v3.0" }
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "python-dotenv==1.2.2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",            # async Postgres driver
    "alembic>=1.14,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.28.1,<1",            # async HTTP (BossClient)
    "python-ulid>=2,<4",          # time-sortable unique IDs for jobs
    "x402[fastapi,evm,svm]==2.8.0",
    "cryptography>=45,<47",
    # x402[svm] should pull these; pin explicitly so Docker images always get Solana deps.
    "solders>=0.27,<1",
    "solana>=0.36,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx",                       # for TestClient
    "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=68"]

[tool.setuptools]
packages = ["db", "boss", "payments"]